# superduper-community-apps

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  atlas_vector_search.ipynb  chunked_vector_search.ipynb  compare_vector_search_solutions.ipynb  mnist_torch.ipynb  multimodal_image_search_clip.ipynb  pdf_chat_app_with_decilm7b.ipynb  question_the_docs.ipynb  sentiment_analysis_use_case.ipynb  sql-example.ipynb  transfer_learning.ipynb  vector_search.ipynb  video_search.ipynb  voice_memos.ipynb
apps/: .gitmodules
apps/customer_deduplication/: .env  app.py  customer_details.json  pyproject.toml
apps/customer_deduplication/src/search_src/: create_superduperdb.py  similarity_result.py
apps/ecommerce_semantic_search_app/: pyproject.toml
contrib/: chunked_vector_search.ipynb  resnet_features.ipynb  sentiment_analysis_use_case.ipynb  voice_memos.ipynb
contrib/ecommerce_semantic_search_app/: README.md  app.py
contrib/ecommerce_semantic_search_app/src/: store_to_mongodb.py  transform_data.py
core/: monai_mednist.ipynb  question_the_docs.ipynb  vector_search.ipynb  video_search.ipynb
notebooks/: pdf_chat_app_with_decilm7b.ipynb  sentiment_analysis_use_case.ipynb
official-notebooks/: .gitignore
