[tool.poetry]
name = "vector-search"
version = "0.1.0"
description = ""
authors = ["anitaokoh <sleekymeeratura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.8"
numpy = "^1.25.0"
sentence-transformers = "^2.2.2"
pandas = "^2.0.1"
streamlit = "^1.27.2"
superduperdb = "^0.0.13"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
